--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.0.2",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.9",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.6",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
+    "expo-router": "~3.5.15",
     "expo-splash-screen": "~0.27.4",
+    "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
